package io.github.jonasnuber.valari.api;

public interface BaseValidator { }
