package io.github.jonasnuber.valari.core.bindings;

import io.github.jonasnuber.valari.api.*;
import io.github.jonasnuber.valari.core.ConstructorValidator;
import io.github.jonasnuber.valari.core.ValueValidator;
import io.github.jonasnuber.valari.spi.*;

import java.util.Objects;

/**
 * Internal binding that connects a constructor parameter value to a corresponding {@link Validation} rule.
 *
 * <p>This class is primarily used by {@link ConstructorValidator} to define validation logic
 * for constructor parameters in a fluent style. It serves a dual purpose:</p>
 * <ul>
 *   <li>As a {@link RuleBinding}, it allows binding a validation rule via {@link #mustSatisfy(Validation)} or {@link #ifPresent(Validation)}.</li>
 *   <li>As a {@link NoInputValidator}, it performs validation against a known parameter value during construction-time validation.</li>
 * </ul>
 *
 * <p>Example usage:</p>
 * <pre>{@code
 * validator.parameter("age", age)
 *          .mustSatisfy(greaterThan(0));
 * }</pre>
 *
 * <p>This class is internal to the validation infrastructure and should not be used directly outside of {@code valari}'s fluent API.</p>
 *
 * @param <TYPE> the type of the target object being constructed
 * @param <PARAMETER> the type of the constructor parameter being validated
 *
 * @author Jonas Nuber
 */
@SuppressWarnings("java:S119")
public class ParameterRuleBinding<TYPE, PARAMETER> implements RuleBinding<ConstructorValidator<TYPE>, Validation<PARAMETER>>, NoInputValidator<ThrowingResult> {
    private final String parameterName;
    private final PARAMETER parameter;
    private final ConstructorValidator<TYPE> parent;

    private Validator<PARAMETER, ValidationResult> delegate;

    /**
     * Creates a new binding between a constructor parameter and its validation logic.
     *
     * @param parameterName the name of the constructor parameter (used in error messages); must not be {@code null}
     * @param parameter     the actual value of the parameter to validate
     * @param parent        the parent {@link ConstructorValidator} managing this binding; must not be {@code null}
     * @throws NullPointerException if {@code parameterName} or {@code parent} is {@code null}
     */
    public ParameterRuleBinding(String parameterName, PARAMETER parameter, ConstructorValidator<TYPE> parent) {
        this.parameterName = Objects.requireNonNull(parameterName, "ParameterName must not be null");
        this.parameter = parameter;
        this.parent = Objects.requireNonNull(parent, "Constructor Validator must not be null");
    }

    /**
     * Associates a mandatory validation rule with this constructor parameter.
     *
     * @param validation the validation rule to apply (must not be {@code null})
     * @return the parent validator, enabling fluent chaining
     * @throws NullPointerException if {@code validation} is {@code null}
     */
    @Override
    public ConstructorValidator<TYPE> mustSatisfy(Validation<PARAMETER> validation) {
        delegate = ValueValidator.with(parameterName, validation).withLabelType(LabelType.PARAMETER);

        return parent;
    }

    /**
     * Applies the given validation rule only if the constructor parameter is non-null.
     * <p>
     * If the value is {@code null}, validation is skipped and considered successful.
     * </p>
     *
     * @param validation the validation rule to apply if the parameter value is present (must not be {@code null})
     * @return the parent validator, enabling fluent chaining
     * @throws NullPointerException if {@code validation} is {@code null}
     */
    @Override
    public ConstructorValidator<TYPE> ifPresent(Validation<PARAMETER> validation) {
        delegate = ValueValidator.optional(parameterName, validation).withLabelType(LabelType.PARAMETER);

        return parent;
    }

    /**
     * Validates the constructor parameter using the assigned validation rule.
     *
     * @return the result of validation, including failure reason and parameter name if invalid
     * @throws IllegalStateException if no validation rule was set via {@link #mustSatisfy} or {@link #ifPresent}
     */
    @Override
    public ValidationResult validate() {
        if(delegate == null) {
            throw new IllegalStateException("No validation rule was set. Call mustSatisfy(...) or ifPresent(...) before validation");
        }

        return delegate.validate(parameter);
    }
}
