@startuml
package valari {
    package spi {
        interface MessageResolver {
            resolve(key: String, args: List<Object>, defaultMessage: String, locale:Locale): String

            default resolve(key: String): String
            default resolve(key: String, args Object...): String
            default resolveOrDefault(key: String, defaultMessage: String): String
            default resolveOrDefault(key: String, defaultMessage: String, args Object...): String
            default resolve(key: String, locale: Locale): String
            default resolveOrDefault(key: String, locale: Locale defaultMessage: String, args Object...): String
        }

        interface NoInputValidator<R extends ThrowingResult> {
            validate(): R

            default validateAndThrow()
        }

        interface RuleBinding<V extends BaseValidator, R> {
            mustSatisfy(rule: R): V
            ifPresent(rule: R): V
        }

        interface ThrowingResult {
            throwIfInvalid()
            getState(): ValidationState
            getDetailedMessage(resolver: MessageResolver, locale: Locale): String
            getMessage(resolver: MessageResolver, locale: Locale): String

            default getDetailedMessage(): String
            default getMessage(): String
            default throwIfInvalid(exceptionFactory: Function<String, ? extends RuntimeException>)
            default isValid(): boolean
            defaultMessage inInvalid(): boolean
        }

        interface Validation<T> {
            test(param: T): ValidationResult

            default and(other: Validation<T>): Validation<T>
            default or(other: Validation<T>): Validation<T>
        }

        interface Validator<T, R extends ThrowingResult> {
            validate(toValidate: T): R

            default validateAndThrow(toValidate: T)
        }
    }

    package internal {
        interface BaseValidator {}

        package bindings {
            class FieldRuleBinding<T, F> {
                + FieldRuleBinding(fieldName: String, valueExtractor: Function<T, F>, parent: DomainValidator<T>)
                + mustSatisfy(rule: Validation<F>): DomainValidator<T>
                + ifPresent(rule: Validation<F>): DomainValidator<T>
                + validate(toValidate: T): ValidationResult
                + validateAndThrow(toValidate: T)
            }

            class NestedRuleBinding<T, N> {
                + NestedRuleBinding(validationDescriptor: ValidationDescriptor, valueExtractor: Function<T, N>, parent: DomainValidator<T>)
                + mustSatisfy(rule: DomainValidator<N>): DomainValidator<T>
                + ifPresent(rule: DomainValidator<N>): DomainValidator<T>
                + validate(toValidate: T): ValidationResultCollection
            }

            class ParameterRuleBinding<T, P> {
                + ParameterRuleBinding(parameterName: String, parameter: P, parent: ConstructorValidator<T>)
                + mustSatisfy(rule: Validation<P>): ConstructorValidator<T>
                + ifPresent(rule: Validation<P>): ConstructorValidator<T>
                + validate(): ValidationResult
            }
        }

        package strategies {
            interface ValidationStrategy<R extends ThrowingResult> {
                validate(validators: List<NoInputValidator<ThrowingResult>>, validationDescriptor: ValidationDescriptor): R
            }

            class CollectFailuresStrategy {
                validate(validators: List<NoInputValidator<ThrowingResult>>, validationDescriptor: ValidationDescriptor): ValidationResultCollection
            }

            class FailFastStrategy {
                validate(validators: List<NoInputValidator<ThrowingResult>>, validationDescriptor: ValidationDescriptor): ValidationResultCollection
            }
        }
    }

    package api {
        class SimpleValidation<T> {
            
        }
    }
}

NoInputValidator --|> BaseValidator
Validator --|> BaseValidator
FieldRuleBinding ..|> RuleBinding
FieldRuleBinding ..|> Validator
NestedRuleBinding ..|> RuleBinding
NestedRuleBinding ..|> Validator
ParameterRuleBinding ..|> RuleBinding
ParameterRuleBinding ..|> NoInputValidator
CollectFailuresStrategy ..|> ValidationStrategy
FailFastStrategy ..|> ValidationStrategy
SimpleValidation ..|> Validation
@enduml
